@@ -884,14 +884,21 @@ class t3lib_DB {
 	 * @return	pointer		Returns a positive MySQL persistent link identifier on success, or FALSE on error.
 	 */
 	function sql_pconnect($TYPO3_db_host, $TYPO3_db_username, $TYPO3_db_password)	{
+			// mysql_error() is tied to an established connection
+			// if the connection fails we need a different method to get the error message
+		ini_set('track_errors', 1);
+		ini_set('html_errors', 0);
 		if ($GLOBALS['TYPO3_CONF_VARS']['SYS']['no_pconnect'])	{
 			$this->link = @mysql_connect($TYPO3_db_host, $TYPO3_db_username, $TYPO3_db_password);
 		} else {
 			$this->link = @mysql_pconnect($TYPO3_db_host, $TYPO3_db_username, $TYPO3_db_password);
 		}
+		$error_msg = $php_errormsg;
+		ini_restore('track_errors');
+		ini_restore('html_errors');
 
 		if (!$this->link) {
-			t3lib_div::sysLog('Could not connect to Mysql server '.$TYPO3_db_host.' with user '.$TYPO3_db_username.'.','Core',4);
+			t3lib_div::sysLog('Could not connect to Mysql server '.$TYPO3_db_host.' with user '.$TYPO3_db_username.': '.$error_msg,'Core',4);
 		} else {
 			$setDBinit = t3lib_div::trimExplode(chr(10), $GLOBALS['TYPO3_CONF_VARS']['SYS']['setDBinit'],TRUE);
 			foreach ($setDBinit as $v)	{
@@ -900,6 +907,7 @@ class t3lib_DB {
 				}
 			}
 		}
+
 		return $this->link;
 	}
 
